# operating_system_in_rust

./: Cargo.toml  Makefile.toml  README.md  x86_64-rust_os.json
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: allocator.rs  display.rs  frame_buffer_writer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pci.rs  register.rs  serial.rs  usb.rs  vga_buffer.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
kernel/src/apic/: mod.rs
kernel/src/display/: cursor.rs
kernel/src/frame_buffer_writer/: cursor.rs  pixel_color.rs  text_writer.rs  vector2d.rs  writing_shapes.rs  writing_text.rs
kernel/src/task/: executor.rs  keyboard.rs  simple_executor.rs
kernel/src/usb/: controller.rs  device.rs  error.rs  xhci.rs
kernel/src/usb/xhci/: controller.rs  registers.rs
kernel/src/usb/xhci/registers/: capability_registers.rs  operational_registers.rs
kernel/src/usb/xhci/registers/operational_registers/: command_ring_control_register.rs  configure_register.rs  device_context_base_address_array_pointer_register.rs
kernel/tests/: stack_overflow.rs
memory_operation/: Cargo.toml
memory_operation/src/: lib.rs  mapper.rs
pci/: Cargo.toml
pci/src/: lib.rs
pci/src/host_controller/: mod.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
xhci/: Cargo.toml
xhci/src/: lib.rs  macros.rs
(+12 files in other folders)
