[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.2.2"
spin = "0.9.8"
log = "0.4.21"
x86_64 = "0.14.2"
uart_16550 = "0.3.0"
pic8259 = "0.11.0"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[dependencies.bootloader_api]
version = "0.11.7"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.noto-sans-mono-bitmap]
version = "0.3.0"
default-features = false
features = [
    "regular",
    "size_16",
    "unicode-basic-latin",
    "unicode-specials",
]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

